# strand

./: .editorconfig  .gitignore  00_STRAND_MONOREPO_README.md  01_NEXLINK_REQUIREMENTS.md  01_STRANDLINK_REQUIREMENTS.md  02_STRANDROUTE_REQUIREMENTS.md  03_STRANDSTREAM_REQUIREMENTS.md  04_NEXTRUST_REQUIREMENTS.md  04_STRANDTRUST_REQUIREMENTS.md  05_STRANDAPI_REQUIREMENTS.md  06_STRANDCTL_REQUIREMENTS.md  07_NEXUS_CLOUD_REQUIREMENTS.md  07_STRAND_CLOUD_REQUIREMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PICKUP_PROMPT.md  README.md  SECURITY.md  agent_delegation  docker-compose.dev.yml  docker-compose.network.yml  docker-compose.yml  e2e_demo  flake.nix  go.work  go.work.sum  routing  tool_use
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
infra/bmv2/: Dockerfile
infra/vpp/: Dockerfile  healthcheck.sh  setup.sh  startup.conf
marketing/: LAUNCH_ANNOUNCEMENT.md
nexapi/: Dockerfile  Dockerfile.dev  go.mod
nexapi/examples/echo/: main.go
nexapi/pkg/client/: client.go
nexapi/pkg/nexbuf/: encoder.go  nexbuf_test.go
nexapi/pkg/protocol/: agent.go  errors.go  framing.go  messages.go  messages_test.go  opcodes.go
nexapi/pkg/sad/: builder.go  sad.go
nexapi/pkg/server/: server.go
nexapi/pkg/transport/: overlay.go  overlay_test.go  transport.go
nexctl/: Dockerfile  go.mod  go.sum  main.go
nexctl/cmd/: dashboard.go  diagnose.go  firmware.go  node.go  root.go  trust.go  version.go
nexctl/pkg/api/: client.go  mock.go  types.go
nexctl/pkg/config/: config.go
nexctl/tests/: cmd_test.go
nexlink/: build.zig
nexlink/src/: frame.zig  header.zig  memory_pool.zig  root.zig
nexlink/src/platform/: mock.zig
nexlink/tests/: frame_test.zig  overlay_test.zig
nexroute/: CMakeLists.txt
nexroute/include/nexroute/: p4_runtime.h  routing_table.h  types.h
nexroute/p4/: headers.p4  sad_forward.p4
nexroute/src/: gossip.c  multipath.c  resolver.c  routing_table.c  sad.c
nexroute/tests/: test_main.c  test_routing.c  test_sad.c
nexstream/: Cargo.toml
nexstream/benches/: transport_bench.rs
nexstream/src/: connection.rs  error.rs  frame.rs  lib.rs  loss_detection.rs  mux.rs  retransmission.rs  stream.rs
nexstream/src/congestion/: cubic.rs  mod.rs
nexstream/src/transport/: best_effort.rs  reliable_ordered.rs  reliable_unordered.rs
nexstream/tests/: cubic_tests.rs  frame_tests.rs  mux_tests.rs
nextrust/: Cargo.toml
nextrust/src/: error.rs  lib.rs
nextrust/src/crypto/: aead.rs  hash.rs  keys.rs  mod.rs
nextrust/src/handshake/: messages.rs
nextrust/src/mic/: mod.rs
nextrust/tests/: crypto_tests.rs  mic_tests.rs
nexus-cloud/: Dockerfile  Dockerfile.allinone  Dockerfile.dev  Makefile  go.mod
nexus-cloud/cmd/nexus-cloud/: main.go
nexus-cloud/pkg/agent/: agent.go  heartbeat.go
nexus-cloud/pkg/apiserver/: middleware.go  node_handler.go  route_handler.go  server.go  trust_handler.go
nexus-cloud/pkg/ca/: ca.go  keystore.go
nexus-cloud/pkg/controller/: fleet.go
nexus-cloud/pkg/observability/: metrics.go
nexus-cloud/pkg/store/: etcd.go
nexus-cloud/tests/: apiserver_test.go
platform/auth/: go.mod
platform/db/clickhouse/: 001_create_telemetry.sql  002_create_traffic_usage.sql
platform/db/migrations/: 000001_create_tenants.down.sql  000001_create_tenants.up.sql  000002_create_users.up.sql  000003_create_api_keys.up.sql  000004_create_subscriptions.down.sql  (+6 more)
platform/infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  index.ts  package.json
platform/infra-gcp/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  tsconfig.json
scripts/: build-all.sh  install-deps.sh  run-benchmarks.sh  run-demo.sh  run-integration-tests.sh  test-all.sh
strand-cloud/: Dockerfile  Dockerfile.allinone  Dockerfile.dev  Makefile  go.mod  go.sum
strand-cloud/tests/: apiserver_test.go  ca_test.go  store_test.go
strandapi/: Dockerfile  Dockerfile.dev  go.mod
strandctl/: Dockerfile  Makefile  go.mod  go.sum  main.go
strandctl/cmd/: completion.go  dashboard.go  diagnose.go  firmware.go  metrics.go  node.go  root.go  route.go  trust.go  version.go
strandctl/tests/: cmd_test.go
strandlink/: build.zig
strandlink/include/: strandlink.h
strandlink/src/: crc.zig  frame.zig  header.zig  memory_pool.zig  options.zig  overlay.zig  ring_buffer.zig  root.zig
strandlink/tests/: frame_test.zig  overlay_test.zig  ring_buffer_test.zig
strandroute/: CMakeLists.txt
strandroute/include/strandroute/: p4_runtime.h  routing_table.h  sad.h  strandlink_compat.h  types.h
strandroute/p4/: forwarding.p4  headers.p4  parser.p4  sad_forward.p4  sad_lookup.p4
strandroute/src/: forwarding.c  gossip.c  multipath.c  p4_runtime.c  resolver.c  routing_table.c  sad.c  sad_match.c
strandroute/tests/: test_main.c  test_routing.c  test_sad.c
strandstream/: Cargo.toml
strandstream/benches/: transport_bench.rs
strandstream/src/: connection.rs  error.rs  flow_control.rs  frame.rs  lib.rs  mux.rs  retransmission.rs  rtt.rs  stream.rs
strandstream/src/congestion/: cubic.rs
strandstream/src/transport/: best_effort.rs  mod.rs  probabilistic.rs  reliable_ordered.rs  reliable_unordered.rs
strandstream/tests/: cubic_tests.rs  frame_tests.rs  mux_tests.rs  transport_tests.rs
strandtrust/: Cargo.toml
strandtrust/benches/: crypto_bench.rs
strandtrust/src/: error.rs  ffi.rs  lib.rs
strandtrust/tests/: crypto_tests.rs  handshake_tests.rs  mic_tests.rs
tests/bench/: go.mod  nexbuf_bench_test.go
tests/fuzz/: go.mod  nexbuf_fuzz_test.go
tests/integration/: go.mod  go.sum  nexapi_server_test.go  nexcloud_api_test.go  nexctl_e2e_test.go  protocol_compat_test.go
website/: mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
website/app/: globals.css  layout.tsx  page.tsx
website/lib/: api.ts  auth.ts  brand.ts  format.ts  navigation.ts
(+176 files in other folders)
