[package]
name = "nextrust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "NexTrust L4 - Model Identity, Cryptographic Trust & Attestation"
license = "MIT OR Apache-2.0"

[lib]
name = "nextrust"
crate-type = ["lib", "cdylib"]

[features]
default = ["std", "crypto"]
std = []
crypto = []
zk = []

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
blake3 = "1"
hkdf = "0.12"
rand = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytes = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
