[package]
name = "strandstream"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "StrandStream L3 hybrid transport layer for the Strand Protocol stack"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
bytes = "1.5"
thiserror = "2"
rand = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transport_bench"
harness = false
